overflow fix

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -4,7 +4,7 @@
   height: 100%;
   display: flex;
   float: left;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .fade-in {
@@ -20,7 +20,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
   overflow-wrap: break-word;
   position: relative;
   scrollbar-width: none;
